Update Jupyter_Notebook_Course2_Peer_assessment_Nguyen Thi Thuy.ipynb

--- a/Jupyter_Notebook_Course2_Peer_assessment_Nguyen Thi Thuy.ipynb
+++ b/Jupyter_Notebook_Course2_Peer_assessment_Nguyen Thi Thuy.ipynb
@@ -75,7 +75,7 @@
     "|-------------------|------------|-------|\n",
     "|Python| Intermediate | Beginner |\n",
     "|R| Intermediate | Beginner |\n",
-    "SQL|Advanced | Intermediate|\n",
+    "|SQL|Advanced | Intermediate|\n",
     "        \n",
     "2. Goals for Job Title\n",
     "    -  Data Scientist\n",
